--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,11 @@ body {
     color: rgb(153, 153, 153);
 }
 
+.buttonContainer {
+    display: flex;
+    gap: 10px;
+}
+
 .saveButton, .editButton, .deleteButton {
     font-size: clamp(13px, 0.57vw, 20px);
     background-color: rgba(37, 37, 37, 0.2);
@@ -139,27 +144,4 @@ body {
 
 .taskItem.completed .taskTitle {
     text-decoration: line-through;
-}
-
-.modalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Ensure high z-index */
-}
-
-.modalContent {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    max-width: 400px;
-    width: 100%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1001; /* Modal content above the backdrop */
 }
