--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,13 @@ body {
     border-bottom: 0.3vw solid white;
 }
 
-.taskAdd, .addButton {
+.form-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.taskAdd, .addButton, .aiButton {
     font-family: Arial, sans-serif;
     font-size: clamp(20px, 0.9vw, 35px);
     background-color: rgba(37, 37, 37, 0.2);
@@ -34,9 +40,13 @@ body {
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.addButton {
+.addButton, .aiButton {
     margin: 0.7vw;
     cursor: pointer;
+}
+
+.aiButton {
+    filter: grayscale(100%);
 }
 
 .taskAdd::placeholder {
@@ -48,7 +58,7 @@ body {
     background-color: rgba(37, 37, 37, 0.8);
 }
 
-.addButton:hover {
+.addButton:hover, .aiButton:hover {
     background-color: rgba(82, 82, 82, 0.8);
 }
 
@@ -144,4 +154,87 @@ body {
 
 .taskItem.completed .taskTitle {
     text-decoration: line-through;
+}
+
+.promptModal {
+    padding: 1vw;
+    background-color: rgb(7, 7, 7);
+    color: white;
+    border: 0.3vw solid rgb(255, 255, 255);
+    border-radius: 1vw;
+    width: 37vw;
+    height: 20.3vw;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    overflow-y: auto;
+}
+
+.modalHeader {
+    font-size: clamp(20px, 1.25vw, 38px);
+    color: white;
+    padding-bottom: 0.5vw;
+    margin-bottom: 1.3vw;
+    border-bottom: 0.1vw solid white;
+}
+
+.promptText {
+    width: 35vw;
+    height: 12.5vw;
+    color: white;
+    background-color: rgb(15, 15, 15);
+    border: 0.3vw solid rgb(50, 50, 50);
+    border-radius: 0.5vw;
+    padding: 0.7vw;
+    font-size: clamp(15px, 0.8vw, 20px);
+    font-family: Arial, sans-serif;
+    resize: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    outline: none;
+}
+
+.promptText::placeholder {
+    font-family: Arial, sans-serif;
+    color: white;
+}
+
+.modalButton {
+    font-family: Arial, sans-serif;
+    font-size: clamp(12px, 0.8vw, 20px);
+    background-color: rgba(37, 37, 37, 0.2);
+    color: white;
+    padding: 0.35vw 0.7vw;
+    border: 0.1vw solid white;
+    border-radius: 0.2vw;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.modalButton {
+    margin: 0.7vw;
+    margin-bottom: 0vw;
+    cursor: pointer;
+}
+
+.modalButton:hover {
+    background-color: rgba(52, 52, 52, 0.8);
+}
+
+.previewModal {
+        padding: 1vw;
+        background-color: rgb(7, 7, 7);
+        color: white;
+        border: 0.3vw solid rgb(255, 255, 255);
+        border-radius: 1vw;
+        width: 37vw;
+        height: 20vw;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+        overflow-y: auto;
 }
