fixed bugs and changed preview modal

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@ body {
     border-bottom: 0.3vw solid white;
 }
 
+.subHeader {
+    font-size: clamp(25px, 2.5vw, 30px);
+    color: white;
+    margin: 1vw;
+}
+
 .form-container {
     display: flex;
     align-items: center;
@@ -235,6 +241,46 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: 1;
+        z-index: 2;
         overflow-y: auto;
+}
+
+.previewModal .taskAdd {
+    margin-bottom: 0.7vw;
+}
+
+.error {
+    padding: 1vw;
+    background-color: rgb(7, 7, 7);
+    width: 25vw;
+    color: white;
+    border: 0.3vw solid rgb(255, 255, 255);
+    border-radius: 1vw;
+    border-radius: 5px;
+    font-size: clamp(12px, 0.8vw, 20px);
+    font-weight: bold;
+    text-align: center;
+    position: fixed;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    animation: fadeInOut 2.5s forwards;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+}
+
+@keyframes fadeInOut {
+    0% { opacity: 0; }
+    25% { opacity: 1; }
+    75% { opacity: 1; }
+    100% { opacity: 0; }
 }
